--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
-    "dev": "nodemon dist/app.js",
+    "dev": "nodemon -r dotenv/config dist/app.js",
     "dev2": "nodemon --exec ts-node app.ts"
   },
   "keywords": [],
@@ -28,6 +28,7 @@
     "@types/express": "^4.17.13",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^16.11.2",
+    "dotenv": "^10.0.0",
     "nodemon": "^2.0.14",
     "ts-node": "^10.3.1",
     "typescript": "^4.4.4"
